--- a/index.html
+++ b/index.html
@@ -5,14 +5,8 @@
 </head>
 <body>
     <h1>Welcome to My Website!</h1>
-    <p>Click the links below to view my Canva pages:</p>
-    <ul>
-        <li><a href="1.png" target="_blank">Page 1</a></li>
-        <li><a href="2.png" target="_blank">Page 2</a></li>
-      <li><a href="3.png" target="_blank">Page 3</a></li>
-      <li><a href="4.png" target="_blank">Page 3</a></li>
-      <li><a href="5.png" target="_blank">Page 3</a></li>
-      
-    </ul>
+    <p>Here are my Canva pages:</p>
+    <img src="1.png" alt="Page 1" style="width:100%; max-width:600px;">
+    <img src="2.png" alt="Page 2" style="width:100%; max-width:600px;">
 </body>
 </html>
